# MLWorkshop

./: .gitignore  .pre-commit-config.yaml  2_real_estate_CA_outlier_identification_needed_predict_price.ipynb  4_real_estate_deep_learning.ipynb  Course.md  Flier  Flier.md  Hashing Out Course Details  HashingOutCourseDetails.md  LICENSE  Makefile  README.md  pyproject.toml  real_estate _load_mini_batch.ipynb  real_estate_CA.ipynb  requirements.in  requirements.txt
doc/lesson/: 2.md  4.md  5.md
lesson/: 1.md  3.md  6.md
lesson1/: poultry.py  student_perf_profile.py
lesson1/extra/: poultry.py  sky_is_blue.py  student_perf_features.py  student_perf_profile.py  t5_tokenize.py
tests/lesson1/: hello_test.py
tests/util/: fetch_test.py
util/: fetch.py  temp_folder.py
