
[project]
name = "dojo-ml-workshop-2024"
requires-python = ">=3.12"
license = "MIT"

[tool.black]
line-length = 100

[tool.isort]
float_to_top =            true
include_trailing_comma =  true
multi_line_output =       "VERTICAL_HANGING_INDENT"
line_length =             100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C", "C4", "C90", "COM",
    "DTZ", "E", "EM", "EXE", "F", "FBT", "FIX", "FURB", "G", "ICN", "INT", "ISC",
    "LOG", "N", "NPY", "PD", "PERF", "PIE", "PL", "PTH", "PYI", "Q", "RET", "RSE", "RUF",
    "SIM", "SLF", "SLOT", "TCH", "TID", "TRY", "UP", "W", "YTT",
]
ignore = [
    "ANN101",
    "ANN401",
    'B019',
    "COM812",
    "ICN001",
    "PD901",
    "PLR2004",
    "PLW2901",
    "PTH123",
    "RUF006",
    "SIM300",
]
